<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout2"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:cardCornerRadius="8dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/txt_fecha"
        app:layout_constraintTop_toBottomOf="@+id/txt_fecha">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView45"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/ic_pin"
                android:backgroundTint="@color/purple_500"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/imageView44"
                app:layout_constraintStart_toStartOf="@+id/imageView44"
                app:layout_constraintTop_toBottomOf="@+id/txt_observaciones" />

            <TextView
                android:id="@+id/txt_observaciones"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/includemovimientorastreo_txt_observaciones"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/txt_recibio"
                app:layout_constraintTop_toBottomOf="@+id/txt_recibio" />

            <ImageView
                android:id="@+id/imageView44"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/ic_detalle"
                android:backgroundTint="@color/purple_500"
                app:layout_constraintStart_toStartOf="@+id/textView115"
                app:layout_constraintTop_toBottomOf="@+id/textView115" />

            <TextView
                android:id="@+id/txt_confirmacion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/includemovimientorastreo_txt_confirmacion"
                app:layout_constraintBottom_toBottomOf="@+id/imageView45"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView45"
                app:layout_constraintTop_toTopOf="@+id/imageView45" />

            <TextView
                android:id="@+id/textView115"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/includemovimientorastreo_txt_textdetalles"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txt_recibio"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="Recibió: DEVOLUCION identificación"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView44"
                app:layout_constraintTop_toTopOf="@+id/imageView44" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/img_circle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/ic_circle_dos"
        android:backgroundTint="@color/purple_500"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_fecha"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/includemovimientorastreo_txt_fecha"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/img_circle"
        app:layout_constraintStart_toEndOf="@+id/img_circle"
        app:layout_constraintTop_toTopOf="@+id/img_circle" />

    <View
        android:id="@+id/view8"
        android:layout_width="8dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/ic_line_vertical_dos"
        app:layout_constraintBottom_toBottomOf="@+id/cardView5"
        app:layout_constraintEnd_toEndOf="@+id/img_circle"
        app:layout_constraintStart_toStartOf="@+id/img_circle"
        app:layout_constraintTop_toBottomOf="@+id/img_circle" />

</androidx.constraintlayout.widget.ConstraintLayout>